# baths

./: .gitignore  .replit  CLAUDE.md  Dockerfile  HEALTH_REPORT.md  PORTS.md  README.md  alembic.ini  api-registry.json  docker-compose.yml  health-check.sh  package.json  pyproject.toml  railway.toml  replit.md  start-all.sh  start-everything.py  start-frontends.py  start-viz-backends.py  stop-all.sh
.claude/: settings.local.json
.devcontainer/: devcontainer.json
.github/workflows/: engine-scrapers.yml  fragment-cosm.yml
alembic/: env.py
backend/: requirements.txt
backend/app/: external_apis.py  main.py  seed.py
backend/data/: domes.db
backend/tests/: test_gaps.py  test_matching.py
baths-dashboard/: vite.config.ts
baths-dashboard/src/: App.tsx  index.css
baths-engine/: DEMO.md  DEPLOY.md  DESIGN.md  Dockerfile  README.md  docker-compose.yml  nixpacks.toml  railway.json  start-demo.sh
baths-engine/backend/: main.py  (+7 more)
baths-suite/: console.js  data.js  duomo.js  finance.js  index.html  thauma.js
data/: cosm.json  lifecycle.csv
docs/: API.md  README.md  SCHEMA.md  SKELETON_KEY.md  SPECIFICATION.md
dome/: config.py  main.py
domes-v2/: alembic.ini  pyproject.toml  requirements.txt
domes-v2/alembic/: env.py
domes-v2/alembic/versions/: 001_initial_schema.py
domes-v2/dashboard/: index.html
domes-v2/domes/: __init__.py  config.py  database.py  enums.py  seed.py
domes-v2/domes/models/: __init__.py  assessment.py  base.py  biometric.py  condition.py  consent.py  dome.py  encounter.py  enrollment.py  environment.py  flourishing.py  fragment.py  gap.py  medication.py  observation.py  person.py  provision.py  system.py
domes-v2/domes/schemas/: __init__.py  consent.py  dome.py  flourishing.py  fragment.py  observation.py  person.py
domes-v2/domes/services/: __init__.py  api.py  compute.py  cosm.py  flourishing.py  fragment.py  prediction.py
duomo-stripboard/: board.js  breakdown.js  budget.js  callsheet.js  data.js  duomo-stripboard-spec.md  index.html  schedule.js  slate.js  stripboard.js
frontend/: index.html  next.config.mjs  next.config.ts  package-lock.json  tailwind.config.ts  vite.config.ts
intelligence/: __init__.py  agent_network.py  frontier.py  memory.py  models.py  researcher.py  seed_simulations.py  swarm.py  world_model.py
schema/: __init__.py  bridge.py  core.py  cosm_scoring.py  creative.py  cross_layer.py  dome.py  dome_bond.py  fhir.py  person_runner.py  scaling.py  sdoh.py  sphere.py  world_model.py
sphere-os/: alembic.ini  pyproject.toml
sphere-os/db/migrations/productions/: 001_initial_schema.sql
sphere-os/db/migrations/safety/: 001_initial_schema.sql
sphere-os/src/frontend/: next.config.ts  package-lock.json  package.json
sphere-os/src/frontend/src/app/: page.tsx
sphere-os/src/frontend/src/app/safety/: page.tsx
sphere-os/src/frontend/src/app/spheres/: page.tsx
sphere-os/src/frontend/src/components/: MaterialStateViz.tsx  Nav.tsx
sphere-os/src/frontend/src/lib/: api.ts
sphere-os/src/land/: clustering.py  scoring.py
sphere-os/src/materials/: api.py  orchestrator.py
sphere-os/src/materials/drivers/: deployable_4d.py  electrochromic.py  haptic.py  projection.py  shape_memory.py
sphere-os/src/productions/: generator.py  prompts.py
sphere-os/src/safety/: alerts.py  api.py  models.py
sphere-os/src/scheduling/: api.py  conflicts.py  models.py
sphere-os/src/shared/: app.py  database.py
sphere-os/tests/land/: test_clustering.py  test_scoring.py
sphere-os/tests/materials/: test_orchestrator.py
sphere-os/tests/productions/: test_generator.py
src/: loop.mjs
tests/: conftest.py  test_cross_app.py  test_domes_legal.py  test_spheres_lab.py
(+2604 files in other folders)
