[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "domes-v2"
version = "2.0.0"
description = "Digital twin Of Multiple Entangled Systems — person-centric data unification platform"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }

dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    # Database
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    # Validation
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    # Utilities
    "python-dateutil>=2.9.0",
    "httpx>=0.27.0",
    "orjson>=3.10.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.9",
    # Async utilities
    "anyio>=4.4.0",
    "tenacity>=8.3.0",
    # Logging / observability
    "structlog>=24.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "factory-boy>=3.3.0",
    "faker>=25.3.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]
seed = [
    "faker>=25.3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["domes"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501", "B008"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["domes"]
omit = ["*/tests/*", "*/seed.py"]
